<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.MedInfoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/med_info" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cima_med_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/med_img"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hide_image_80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/lab"
                    app:layout_constraintEnd_toStartOf="@id/btns"
                    app:layout_constraintStart_toEndOf="@id/img"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lab"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintEnd_toStartOf="@id/btns"
                    app:layout_constraintStart_toEndOf="@id/img"
                    app:layout_constraintTop_toBottomOf="@id/nombre" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btns"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/ib_receta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/med_with_prescription"
                        android:padding="8dp"
                        android:src="@drawable/prescriptions_32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/ib_conduccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/med_can_affect_driving"
                        android:padding="8dp"
                        android:src="@drawable/car_crash_32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ib_receta" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ReactiveGuide
                    android:id="@+id/guideline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img" />

                <ImageButton
                    android:id="@+id/ib_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/see_online"
                    android:padding="8dp"
                    android:src="@drawable/captive_portal_32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <androidx.constraintlayout.widget.ReactiveGuide
                    android:id="@+id/guideline2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/ib_web"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ib_web" />

                <TextView
                    android:id="@+id/nregistro_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nregistro"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/guideline2"
                    app:layout_constraintStart_toEndOf="@id/ib_web"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <TextView
                    android:id="@+id/nregistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toTopOf="@id/guideline2"
                    app:layout_constraintStart_toEndOf="@id/nregistro_label"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <TextView
                    android:id="@+id/cn_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/national_drug_code"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/guideline3"
                    app:layout_constraintStart_toEndOf="@id/ib_web"
                    app:layout_constraintTop_toBottomOf="@id/guideline2" />

                <TextView
                    android:id="@+id/cn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toTopOf="@id/guideline3"
                    app:layout_constraintStart_toEndOf="@id/cn_label"
                    app:layout_constraintTop_toBottomOf="@id/guideline2" />

                <androidx.constraintlayout.widget.ReactiveGuide
                    android:id="@+id/guideline3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/ib_web"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/ib_prospecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/see_leaflet"
                    android:padding="8dp"
                    android:src="@drawable/receipt_long_32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/prospecto_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_leaflet"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/guideline4"
                    app:layout_constraintStart_toEndOf="@id/ib_prospecto"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <androidx.constraintlayout.widget.ReactiveGuide
                    android:id="@+id/guideline4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ib_prospecto" />

                <TextView
                    android:id="@+id/principios_activos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/active_principles"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline4" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_principios_activos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/principios_activos" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/snack_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/snack_bar_bg"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/med_affects_driving"
                android:textColor="@color/snack_bar_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_see"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:padding="4dp"
                android:text="@string/see"
                android:textColor="@color/snack_bar_action_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/custom_med_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/med_img"
                android:scaleType="centerCrop"
                android:src="@drawable/hide_image_80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nombre_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/codsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_2"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/codsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/guideline_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_2"
                app:layout_constraintTop_toBottomOf="@id/nombre_2">

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/search_med_by_cn"
                    android:padding="8dp"
                    android:src="@drawable/search_32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/codNacional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/national_drug_code"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:minHeight="48dp"
                    android:textColorHint="#78909C"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_help"
                    app:layout_constraintStart_toEndOf="@id/btn_search"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/help"
                    android:padding="8dp"
                    android:src="@drawable/help_32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ReactiveGuide
                android:id="@+id/guideline_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/no_info_about_med"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/snack_bar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/snack_bar_bg"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/national_drug_code_help"
                android:textColor="@color/snack_bar_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_ok"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:padding="4dp"
                android:text="@string/accept"
                android:textColor="@color/snack_bar_action_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>